# gapMapAi

./: README.md
gapmapai/: package-lock.json  package.json  vite.config.ts
gapmapai/src/: App.tsx
gapmapai/src-tauri/: Cargo.toml  tauri.conf.json
gapmapai/src-tauri/capabilities/: default.json
gapmapai/src-tauri/src/: lib.rs
gapmapai/src/app/: DashboardPage.tsx  pages.ts
gapmapai/src/components/layout/: AppShell.tsx  PlaceholderPage.tsx
gapmapai/src/features/concept-card/: ConceptCardPage.tsx  generateConceptCard.ts
gapmapai/src/features/goal/: NewGoalPage.tsx
gapmapai/src/features/history/: HistoryPage.tsx
gapmapai/src/features/interview/: InterviewPage.tsx
gapmapai/src/features/knowledge-tree/: KnowledgeTreePage.tsx
gapmapai/src/features/learning-path/: LearningPathPage.tsx
gapmapai/src/features/report/: BlindspotReportPage.tsx
gapmapai/src/features/settings/: SettingsPage.tsx
gapmapai/src/lib/ai/: client.ts  errors.ts  maskApiKey.ts  normalizeBaseUrl.ts  providerPresets.ts  types.ts
gapmapai/src/lib/export/: markdownExport.ts
gapmapai/src/lib/prompts/: generateBlindspotReportPrompt.ts  generateConceptCardPrompt.ts  generateKnowledgeTreePrompt.ts  generateLearningPathPrompt.ts  interviewPrompt.ts
gapmapai/src/lib/storage/: localStorageRepository.ts  migration.ts  repository.ts  secureApiKeyStore.ts  sqliteRepository.ts  types.ts
gapmapai/src/lib/storage/sqlite/: conceptCardRepository.ts  database.ts  (+5 more)
gapmapai/src/lib/types/: core.ts  goalLabels.ts  index.ts
gapmapai/src/lib/utils/: json.ts
gapmapai/src/styles/: global.css
